--- a/etc/c11node9/hadoop.conf
+++ b/etc/c11node9/hadoop.conf
@@ -5,6 +5,8 @@
 # master 10.244.36.132 (old 10.244.39.141)
 name=hadoop
 
+image=hadoop.qcow2
+
 mac=
 
 ram=1024
@@ -14,8 +16,6 @@ vcpu=2
 telnetport=4496 # pick the next port
 
 vncport=96
-
-image=${name}.qcow2
 
 ipaddr=
 
