--- a/etc/c11node9/hadoop.conf
+++ b/etc/c11node9/hadoop.conf
@@ -7,7 +7,7 @@ name=hadoop
 
 image=hadoop.qcow2
 
-mac=
+mac=DE:AD:BE:EF:34:5E
 
 ram=1024
 
@@ -17,7 +17,7 @@ telnetport=4454 # pick the next port
 
 vncport = 9
 
-ipaddr=
+ipaddr=10.244.36.12
 
 qemudir=
 
