--- a/conf/global.conf
+++ b/conf/global.conf
@@ -1,3 +1,21 @@
+# cluster configuration
+nfserver=c11node27
+
 last_telnet_port=4453
 last_tcp_port=5453
-last_vnc_port=7
+last_vnc_port=8
+
+# migration configuration
+src=
+dest=
+migration_port=
+qemudir=/root/qemu
+
+# experiment configuration
+is_exp=false
+logdir=/root/miglog
+
+router=c11node28
+rtt=
+
+ganglia=
