--- a/etc/c11node9/test.conf
+++ b/etc/c11node9/test.conf
@@ -2,19 +2,19 @@
 # master 10.244.36.132 (old 10.244.39.141)
 # name = master
 
-image=master.qcow2
+image=test.qcow2
 
-mac=DE:AD:BE:EF:34:5E
+mac=DE:AD:BE:EF:96:BE 
 
 ram=1800 # 1.7G actual size comparable to ec2 m1.small
 
 vcpu=1
 
-telnetport=4446 # pick the next port
+telnetport=4496 # pick the next port
 
-vncport = 1
+vncport = 91
 
-ipaddr=10.244.36.132
+ipaddr=
 
 qemudir=
 
