--- a/etc/c11node9/test.conf
+++ b/etc/c11node9/test.conf
@@ -6,7 +6,8 @@ image=test.qcow2
 
 mac=DE:AD:BE:EF:96:BE 
 
-ram=1800 # 1.7G actual size comparable to ec2 m1.small
+# VM Ram 1.72G (1758M) actual size comparable to 1.7G (1740.8M) of ec2 m1.small
+ram=1800 
 
 vcpu=1
 
@@ -14,7 +15,8 @@ telnetport=4496 # pick the next port
 
 vncport = 91
 
-ipaddr=
+# same as hadoop.qcow2
+ipaddr=10.244.36.12
 
 qemudir=
 
